--- a/package/my_upi_india_plugin/pubspec.yaml
+++ b/package/my_upi_india_plugin/pubspec.yaml
@@ -1,4 +1,4 @@
-name: razorpay_plugin
+name: my_upi_india_plugin
 description: A new Flutter package project.
 version: 0.0.1
 homepage:
@@ -10,8 +10,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  razorpay_flutter: ^1.3.4
-  fluttertoast: ^8.2.1
   upi_india: ^3.0.1
 
 dev_dependencies:
