--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dev_dependencies:
     sdk: flutter
   razorpay_plugin:
     path: package/razorpay_plugin
+  my_upi_india_plugin:
+    path: package/my_upi_india_plugin
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
